--- a/bin/application/StudentSearch.fxml
+++ b/bin/application/StudentSearch.fxml
@@ -16,7 +16,7 @@
       <Label layoutX="203.0" layoutY="30.0" text="学生姓名：" />
       <Label layoutX="30.0" layoutY="178.0" text="入学起始时间：" />
       <Label alignment="CENTER" contentDisplay="CENTER" layoutX="30.0" layoutY="130.0" prefHeight="15.0" prefWidth="51.0" text="状   态：" textAlignment="JUSTIFY" />
-      <TextField fx:id="studentID" editable="false" layoutX="90.0" layoutY="30.0" prefHeight="20.0" prefWidth="100.0" />
+      <TextField fx:id="studentID" layoutX="90.0" layoutY="30.0" prefHeight="20.0" prefWidth="100.0" />
       <ComboBox fx:id="sex" layoutX="90.0" layoutY="80.0" prefHeight="25.0" prefWidth="100.0" />
       <TextField fx:id="major" layoutX="263.0" layoutY="81.0" prefHeight="23.0" prefWidth="103.0" />
       <TextField fx:id="realName" layoutX="263.0" layoutY="30.0" prefHeight="23.0" prefWidth="103.0" />
