--- a/src/application/CoursesMain.fxml
+++ b/src/application/CoursesMain.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="690.0" prefWidth="1296.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.TeachersController">
+<AnchorPane prefHeight="690.0" prefWidth="1296.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.CoursesController">
    <children>
       <Button fx:id="add" layoutX="18.0" layoutY="17.0" mnemonicParsing="false" text="新增" />
       <Button fx:id="search" layoutX="80.0" layoutY="17.0" mnemonicParsing="false" text="查询" />
